# qr_code_reader

./: .gitignore  CMakeLists.txt  package.xml  readme.md
include/: reader.hpp
launch/: qr_reader.launch  qr_reader_camera.launch
msg/: qr_msg.msg
src/: camera_subscriber.cpp  main.cpp  reader.cpp
